<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 The OnePlus Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_toolbar"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    android:background="?android:attr/colorPrimary"
    android:elevation="8dp"
    android:theme="?android:attr/actionBarTheme"
    android:gravity="center"
    android:visibility="gone">

    <RelativeLayout android:id="@+id/menu_open_container"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <ImageView android:id="@+id/menu_open"
            android:background="@drawable/button_ripple_bg"
            android:src="@drawable/ic_menu_open"
            android:title="@string/menu_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout android:id="@+id/menu_copy_container"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1">

	    <ImageView android:id="@+id/menu_copy"
            android:background="@drawable/button_ripple_bg"
	        android:src="@drawable/ic_menu_copy"
	        android:title="@android:string/copy"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout android:id="@+id/menu_cut_container"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1">
	
	    <ImageView android:id="@+id/menu_cut"
            android:background="@drawable/button_ripple_bg"
	        android:src="@*android:drawable/ic_menu_cut_material"
	        android:title="@android:string/cut"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout android:id="@+id/menu_share_container"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1">
	
	    <ImageView android:id="@+id/menu_share"
            android:background="@drawable/button_ripple_bg"
	        android:src="@drawable/ic_menu_share"
	        android:title="@string/menu_share"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout android:id="@+id/menu_delete_container"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1">
	
	    <ImageView android:id="@+id/menu_delete"
            android:background="@drawable/button_ripple_bg"
	        android:src="@drawable/ic_menu_delete"
	        android:title="@string/menu_delete"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout android:id="@+id/menu_rename_container"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1">

	    <ImageView android:id="@+id/menu_rename"
            android:background="@drawable/button_ripple_bg"
	        android:src="@drawable/ic_menu_rename"
	        android:title="@string/menu_rename"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</LinearLayout>
